--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Visual Studio 2015 user specific files
-.vs/
+.vs/an a big buinder burj khalifa.
 
 # Compiled Object files
 *.slo
@@ -40,6 +40,11 @@
 *.sdf
 *.VC.db
 *.VC.opendb
+one car going in road
+one man accident
+
+and death
+man cloth color green
 
 # Precompiled Assets
 SourceArt/**/*.png
